--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-title: Hello, world! I'm David Freeman
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Hello, Wellcome to H4k3rhut(hakerhut)
+description: We are Software Security Professionals passionate about AppSec, IoT, Hardware & Wireless Security.
 permalink: ':title/'
 baseurl: "/hakerhut" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -11,7 +8,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: David Freeman # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: We are Software Security Professionals passionate about IoT, Hardware & Wireless Security. # add description
+about-author: We are Software Security Professionals passionate about AppSec, IoT, Hardware & Wireless Security. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: artemsheludko # add your Github handle
