--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
+author: HAKERHUT(h4k3rhut)
 author-img: david-freeman.jpg # add your photo
 about-author: We are Software Security Professionals passionate about AppSec, IoT, Hardware & Wireless Security. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github:  # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: h4k3rhut # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
