--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github:  # add your Github handle
 social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-email: ankush.h4k3rhut@icloud.com # add your Email address
 
 # Disqus
 discus-identifier: h4k3rhut # add your discus identifier
