--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Hello, Wellcome to H4k3rhut(hakerhut)
+title: Hello, Wellcome to Hackerhut
 description: We are Software Security Professionals passionate about AppSec, IoT, Hardware & Wireless Security.
 permalink: ':title/'
-baseurl: "/hakerhut" # the subpath of your site, e.g. /blog
+baseurl: "/hackerhut" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: HAKERHUT(h4k3rhut)
+author: HACKERHUT(h4k3rhut)
 author-img: h4k3rhut.png # add your photo
 about-author: We are Software Security Professionals passionate about AppSec, IoT, Hardware & Wireless Security. # add description
 social-twitter: # add your Twitter handle
