--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, Wellcome to Hackerhut
+title: Hackerhut
 description: We are Software Security Professionals passionate about AppSec, IoT, Hardware & Wireless Security.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
